<resources>
    <string name="app_name">Fresh News</string>
    <string name="app_name_fresh">Fresh</string>
    <string name="app_name_news">News</string>

    <string name="iv_app_logo_desc">Fresh News Logo</string>
    <string name="iv_no_data_desc">No Data</string>
    <string name="tv_no_data">No Articles Saved</string>
    <string name="iv_no_network_desc">No Network</string>
    <string name="no_network_msg">Error Occurred \n Check Your Internet Connection</string>
    <string name="refresh_msg">Try Again</string>
    <string name="tv_no_result_desc">No Result</string>
    <string name="no_result_msg">No articles found</string>

    <string name="btn_bookmark_desc">Bookmark</string>
    <string name="btn_back_desc">Back</string>
    <string name="btn_country_desc">Select Country</string>
    <string name="btn_navigate_to_bookmarks_page_desc">Bookmark Page</string>
    <string name="btn_navigate_to_search_page_desc">Search Page</string>

    <string name="article_title">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</string>
    <string name="article_source">Sky Sports</string>
    <string name="article_published_at">07/03/2023 22:30</string>

    <string name="iv_article_desc">Article</string>
    <string name="page_article_title">Article</string>
    <string name="country_code">US</string>
    <string name="select_a_country">Select a country</string>
    <string name="network_error">Network Error</string>

    <string name="add_to_bookmark">News added to Bookmarks</string>
    <string name="remove_from_bookmark">News removed from Bookmarks</string>
    <string name="page_bookmarks_title">Bookmarks</string>

    <string-array name="data_categories">
        <item>general</item>
        <item>technology</item>
        <item>business</item>
        <item>entertainment</item>
        <item>health</item>
        <item>science</item>
        <item>sports</item>
    </string-array>

    <string-array name="data_countries">
        <item>Argentina (ar)</item>
        <item>Australia (au)</item>
        <item>Austria (at)</item>
        <item>Belgium (be)</item>
        <item>Brazil (br)</item>
        <item>Bulgaria (bg)</item>
        <item>Canada (ca)</item>
        <item>China (cn)</item>
        <item>Colombia (co)</item>
        <item>Cuba (cu)</item>
        <item>Czech Republic (cz)</item>
        <item>Egypt (eg)</item>
        <item>France (fr)</item>
        <item>Germany (de)</item>
        <item>Greece (gr)</item>
        <item>Hong Kong (hk)</item>
        <item>Hungary (hu)</item>
        <item>India (in)</item>
        <item>Indonesia (id)</item>
        <item>Ireland (ie)</item>
        <item>Israel (il)</item>
        <item>Italy (it)</item>
        <item>Japan (jp)</item>
        <item>Latvia (lv)</item>
        <item>Lithuania (lt)</item>
        <item>Malaysia (my)</item>
        <item>Mexico (mx)</item>
        <item>Morocco (ma)</item>
        <item>Netherlands (nl)</item>
        <item>New Zealand (nz)</item>
        <item>Nigeria (ng)</item>
        <item>Norway (no)</item>
        <item>Philippines (ph)</item>
        <item>Poland (pl)</item>
        <item>Portugal (pt)</item>
        <item>Romania (ro)</item>
        <item>Russia (ru)</item>
        <item>Saudi Arabia (sa)</item>
        <item>Serbia (rs)</item>
        <item>Singapore (sg)</item>
        <item>Slovakia (sk)</item>
        <item>Slovenia (si)</item>
        <item>South Africa (za)</item>
        <item>South Korea (kr)</item>
        <item>Sweden (se)</item>
        <item>Switzerland (ch)</item>
        <item>Taiwan (tw)</item>
        <item>Thailand (th)</item>
        <item>Turkey (tr)</item>
        <item>Ukraine (ua)</item>
        <item>United Arab Emirates (ae)</item>
        <item>United Kingdom (gb)</item>
        <item>United States (us)</item>
        <item>Venezuela (ve)</item>
    </string-array>

</resources>