<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.HomeFragment">

    <ImageView
        android:id="@+id/iv_app_logo"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/iv_app_logo_desc"
        android:src="@drawable/freshnews_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_app_name_fresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name_fresh"
        android:textColor="?attr/colorPrimary"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="@id/iv_app_logo"
        app:layout_constraintStart_toEndOf="@id/iv_app_logo"
        app:layout_constraintTop_toTopOf="@id/iv_app_logo" />

    <TextView
        android:id="@+id/tv_app_name_news"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name_news"
        android:textColor="?attr/colorPrimary"
        android:textSize="24sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@id/tv_app_name_fresh"
        app:layout_constraintStart_toEndOf="@id/tv_app_name_fresh"
        app:layout_constraintTop_toTopOf="@id/tv_app_name_fresh" />

    <com.google.android.material.chip.Chip
        android:id="@+id/btn_country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:chipIcon="@drawable/ic_country"
        app:layout_constraintEnd_toStartOf="@id/btn_bookmarks"
        app:layout_constraintTop_toTopOf="@id/iv_app_logo"
        app:layout_constraintBottom_toBottomOf="@id/iv_app_logo"
        tools:text="@string/country_code" />

    <Button
        style="?attr/materialIconButtonStyle"
        android:id="@+id/btn_bookmarks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/btn_navigate_to_bookmarks_page_desc"
        app:icon="@drawable/ic_bookmarks"
        app:layout_constraintTop_toTopOf="@id/iv_app_logo"
        app:layout_constraintBottom_toBottomOf="@id/iv_app_logo"
        app:layout_constraintEnd_toStartOf="@id/btn_search" />

    <Button
        style="?attr/materialIconButtonStyle"
        android:id="@+id/btn_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/btn_navigate_to_search_page_desc"
        app:icon="@drawable/ic_search"
        app:layout_constraintTop_toTopOf="@id/iv_app_logo"
        app:layout_constraintBottom_toBottomOf="@id/iv_app_logo"
        app:layout_constraintEnd_toEndOf="parent" />

    <HorizontalScrollView
        android:id="@+id/sv_categories"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="16dp"
        android:scrollbars="none"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_app_logo">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/cg_categories"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            app:singleLine="true"
            app:singleSelection="true"
            app:selectionRequired="true">

        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_breaking_news"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sv_categories"
        tools:listitem="@layout/item_article_card" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <ImageView
        android:id="@+id/iv_no_network"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="-150dp"
        android:contentDescription="@string/iv_no_network_desc"
        android:src="@drawable/freshnews_no_network"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/tv_no_network"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?attr/colorPrimary"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:text="@string/no_network_msg"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_no_network" />

    <Button
        android:id="@+id/btn_refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/refresh_msg"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_no_network" />

</androidx.constraintlayout.widget.ConstraintLayout>