<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.BookmarkedNewsFragment">

    <View
        android:id="@+id/app_bar_bg"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimaryContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginStart="16dp"
        android:src="@drawable/ic_back"
        android:contentDescription="@string/btn_back_desc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/app_bar_bg"
        app:layout_constraintBottom_toBottomOf="@id/app_bar_bg"/>

    <TextView
        android:id="@+id/tv_page_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textSize="24sp"
        android:text="@string/page_bookmarks_title"
        app:layout_constraintStart_toEndOf="@id/btn_back"
        app:layout_constraintTop_toTopOf="@id/app_bar_bg"
        app:layout_constraintBottom_toBottomOf="@id/app_bar_bg" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_bookmarked_news"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_bar_bg"
        app:layout_constraintVertical_bias="0.5"
        tools:listitem="@layout/item_article_list" />

    <ImageView
        android:id="@+id/iv_no_data"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="-150dp"
        android:src="@drawable/freshnews_no_data"
        android:scaleType="centerCrop"
        android:contentDescription="@string/iv_no_data_desc"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/tv_no_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_no_data"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="?attr/colorPrimary"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_no_data" />

</androidx.constraintlayout.widget.ConstraintLayout>