<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="12dp">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="8dp"
            app:layout_constraintBottom_toBottomOf="@id/card_img"
            app:layout_constraintEnd_toEndOf="@id/card_img"
            app:layout_constraintStart_toStartOf="@id/card_img"
            app:layout_constraintTop_toTopOf="@id/card_img"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_img"
            android:layout_width="100dp"
            android:layout_height="110dp"
            android:elevation="0dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                tools:src="@tools:sample/backgrounds/scenic"/>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_source"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/article_source"
            android:textColor="@color/seed"
            android:maxLines="1"
            android:ellipsize="end"
            app:layout_constraintStart_toEndOf="@id/card_img"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/card_img" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:maxLines="3"
            android:ellipsize="end"
            android:text="@string/article_title"
            app:layout_constraintStart_toStartOf="@id/tv_source"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_source" />

        <TextView
            android:id="@+id/tv_published_at"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/article_published_at"
            app:layout_constraintBottom_toBottomOf="@id/card_img"
            app:layout_constraintStart_toStartOf="@id/tv_source" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>